Update to official JetBrains plugin template